conf/deployment.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apring-metal
  name: spring-metal
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: spring-metal
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-metal
spec:
  selector:
    matchLabels:
      app: spring-metal
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-metal
    spec:
      containers:
      - name: spring-metal
        image: harbor.vmtanzu.com/openso-tbs-apps/dekt-metal@sha256:4f6581dcf80dbc2c4cc62b7d5bb685ed7ceed0257e81e35580e74876974a5a56
        ports:
        - containerPort: 8080
