conf/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-metal
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-spring-metal
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-metal
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
